# fin-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  architecture-analysis.md  environment.yml  findings.md  package-lock.json  pyproject.toml  start.bat  start_backend.bat  start_silent.vbs  task_plan.md
.claude/: AGENT.md  docs.md
alembic/: env.py
alembic/versions/: 130277833356_initial_runs_and_trace_records_tables.py
configs/: base.yaml
configs/environments/: local.yaml  prod.yaml  test.yaml
docs/: architecture.md  developer-guide.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
frontend/src/api/: research.ts
frontend/src/components/: AssistantResult.tsx  ChatView.tsx  ChatWorkspace.tsx  Composer.tsx  Markdown.tsx  MessageBubble.tsx  QuantView.tsx  ResearchProcessPanel.tsx  Sidebar.tsx  Starfield.tsx  TopBar.tsx
frontend/src/lib/: queryClient.ts
frontend/src/store/: workspace.ts
src/fin_agent/: __init__.py  __main__.py
src/fin_agent/adapters/: __init__.py
src/fin_agent/bootstrap/: __init__.py  app.py  cli.py  container.py  settings.py
src/fin_agent/domain/: __init__.py  constants.py  types.py
src/fin_agent/interfaces/: __init__.py
static/: index.html
tests/: conftest.py  test_akshare_client.py  test_db_store.py  test_exa_search_client.py  test_fmp_client.py  test_market_data_router.py  test_openai_client.py  test_research_api.py  test_research_workflow.py  test_settings.py  test_yfinance_client.py
(+36 files in other folders)
